# zero2prod

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 1_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/domain/subscriber/: mod.rs  new_subscriber.rs
src/domain/users/: mod.rs  repository.rs  route.rs  service.rs
src/domain/users/dtos/: mod.rs  new_user_dto.rs
src/domain/users/entities/: new_user.rs
src/routes/: mod.rs  subscriptions.rs
src/users/: dtos.rs  mod.rs  repository.rs  route.rs  service.rs
src/users/entities/: new_user.rs
src/utils/: db_test_connection.rs  mod.rs  validation.rs
tests/: health_check.rs  main.rs  user_service.rs
tests/domain/users/: mod.rs  repository.rs  route.rs
tests/utils/: mod.rs  startup.rs
