[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = {  version = "^0.11.26", features = ["blocking", "json"] }

[dependencies]
tokio = { version = "^1.36.0", features = ["macros", "rt-multi-thread"] }
actix-web = "^4.5.1"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.35"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "^0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"
